Fix sticky nav overlapping page content
Added padding to prevent sticky nav from overlapping content.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,4 +40,10 @@
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
+   /* Fix sticky nav overlapping page content */
+   .page__content,
+   .page__inner-wrap {
+      padding-top: 2.5rem;
+   }
+
 ;
